cyberWatch 1.1
========================
- FEATURE: apps menu
- REFACTOR: renderTitle mehod in app
- BUGFIX: fixed when "run once" alarm after ringing and turning system off and on is again enabled


cyberWatch 1.0
========================
- REFACTOR: rewrite UI
- FEATURE: notification bar in top of the display
- FEATURE: locked display can be unlocked by "long touch" - (>0.4s)
- FEATURE: apps can handle long touch - (>0.4s)
- FEATURE: any app can be "on top", e.g. settings panel which is not incluuded in swiping order
- FEATURE: display adjust is changeable in settings screen / miniapp
- FEATURE: using run modes to control flow of current mode (for future pin screen after start, battery charging when connect turned off watches to power supply)
- FEATURE: charging mode (when connect power to turned off watches, show battery icon + % bar instead of fully start)
- FEATURE: "Cassete futurism" clock face
- FEATURE: "Knight Rider speaker" clock face
- FEATURE: Analog wazchface shows date
- FEATURE: 3-slot alarm
- FEATURE: calendar can be reset to the current moon by long touch instead of PEKshort
- FEATURE: PEKShort si default in every app to get to watch face, if not overloaded
- REFACTOR: Move apps related function to AppRunner from MainScreen #refactor
- REFACTOR: display adjust is now set in percentage (1 - 100) (and stored in resgistry after shutdown)
- REFACTOR: reset display typography method instead of calling all methods to set default color, font & szie
- BUGFIX: Fix read bma interupt in MoveSensor isTilt func which caused not waked by tilt in some watch faces
- BUGFIX: analog + planetoid watch faces update every second (check for prev second)

cyberWatch 0.4
========================
- FEATURE: set mainscreen to datetime app after power on / wakeup (touch)
- FEATURE: wakeup to locked screen, unlock by PEKshort
- FEATURE: system event subsystem
- FEATURE: when display always on - and inactivity conditions are true, set to default screen and lock ui